--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -181,14 +181,14 @@
 						<td>  </td>
 						<td> 1 Oct. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
+						<td> </td>
 						<td> Quiz 3 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 2.5: The Chain Rule </td>
-						<td>  <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
+						<td>  <a href="./hw/hw9.pdf">HW 9</a> , <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
