--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -175,7 +175,7 @@
 						<td> 30 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
 						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
-						<td>  </td>
+						<td> <a href="./worksheets/productrule.pdf"> Product Rule </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -187,21 +187,21 @@
 					<tr>
 						<td> </td>
 						<td> 3 Oct. </td>
-						<td> 2.5: The Chain Rule </td>
-						<td>  <a href="./hw/hw9.pdf">HW 9</a> , <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
+						<td> 2.4 and 2.5: The Chain Rule</td>
+						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  <Oct>
 						<td> 4 Oct. </td>
 						<td> 2.5 The Chain Rule </td>
-						<td> </td>
+						<td>  <a href="./hw/hw9.pdf">HW 9</a>, <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a></td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 7 Oct. </td>
-						<td> Review </td>
+						<td> 2.5: The Chain Rule </td>
 						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
 						<td>  </td>
 					</tr>
