--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -202,7 +202,7 @@
 						<td> 6 </td>
 						<td> 7 Oct. </td>
 						<td> 2.5: The Chain Rule </td>
-						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -230,7 +230,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 2.6: Derivatives of Trig Functions </td>
-						<td> <a href="./pcq/pcq2.6.pdf"> PCQ: 2.6 </a>  </td>
+						<td> <a href="./hw/hw10.pdf">HW 10</a>, <a href="./pcq/pcq2.6.pdf"> PCQ: 2.6 </a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
