--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -208,8 +208,8 @@
 					<tr>
 						<td> </td>
 						<td> 8 Oct. </td>
-						<td> 5.7: Application in Probability </td>
-						<td> <a href="./pcq/pcq5.7.pdf"> PCQ: 5.7 </a> </td>
+						<td> 5.6: Application in Physics </td>
+						<td> </td>
 						<td> Quiz 3 </td>
 					</tr>
 					<tr>
