--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -230,7 +230,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 7.1: Differential Equations </td>
-						<td> <a href="./hw/hw10.pdf">HW 10</a>,<a href="./pcq/pcq7.1.pdf"> PCQ: 7.1 </a> </td>
+						<td> <a href="./pcq/pcq7.1.pdf"> PCQ: 7.1 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
