--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -278,7 +278,7 @@
 					<tr>
 						<td>  </td>
 						<td> 25 Oct. </td>
-						<td> 6.4: Partial Fractions </td>
+						<td> 6.3: Trig Integrals  </td>
 						<td> <a href="./pcq/pcq6.4.pdf"> PCQ: 6.4 </a> </td>
 						<td>  </td>
 					</tr>
@@ -292,8 +292,8 @@
 					<tr>
 						<td>  </td>
 						<td> 29 Oct. </td>
-						<td> 6.5: Computer Algebra Systems </td>
-						<td> <a href="./pcq/pcq6.5.pdf"> PCQ: 6.5 </a> </td>
+						<td> 6.4: Partial Fractions </td>
+						<td> </td>
 						<td> Quiz 6 </td>
 					</tr>
 					<tr>
