--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     </section>
 
     <section id="section-teaching">
-      <h1>Teaching</h1>
+      <h1>Current Teaching</h1>
       <ul>
         <li>
-          <a href="">Math 131, Calculus I, Fall 2019</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH131/index.html">Math 131, Calculus I, Fall 2019</a>
         </li>
         <li>
-          <a href="">Math 132 Calculus II, Fall 2019</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH132/index.html">Math 132 Calculus II, Fall 2019</a>
         </li>
       </ul>
     </section>
