--- a/teaching.html
+++ b/teaching.html
@@ -36,6 +36,22 @@
       <li>
         <a href="classes/MATH132/index.html">MATH 132, Calculus II</a>
       </li>
+      <li>
+        <a href="https://wayfindingacademy.org/list-of-events/2019/9/11/mathematical-thinking-lab">Mathematical Thinking</a>
+      </li>
+    </ul>
+
+    <p>In the past I have taught:</p>
+    <ul>
+      <li>
+        <p>Multivariable Calculus (at UW)</p>
+      </li>
+      <li>
+        <p>Linear Algebra (at UW)</p>
+      </li>
+      <li>
+        <p>Systems of ODE's and Intro to PDE's (at UW)</p>
+      </li>
     </ul>
   </main>
 
