--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,12 @@
 
   <main>
     <h1>Projects</h1>
-    <p>under construction</p>
+    
+    <h2>SET</h2>
+    <p>I am currently working on a project genralizing the game card game SET. Below you can find links to varius versions we have created and other material.</p>
+    <ul>
+      <li> </li>
+    </ul>
   </main>
 
   <footer>
