--- a/teaching.html
+++ b/teaching.html
@@ -36,22 +36,18 @@
       <li>
         <a href="classes/MATH132/index.html">MATH 132, Calculus II</a>
       </li>
-      <li>
-        <a href="https://wayfindingacademy.org/list-of-events/2019/9/11/mathematical-thinking-lab">Mathematical Thinking</a>
-      </li>
     </ul>
 
     <p>In the past I have taught:</p>
     <ul>
       <li>
-        <p>Multivariable Calculus (at UW)</p>
+        <a href="https://wayfindingacademy.org/list-of-events/2019/9/11/mathematical-thinking-lab">Mathematical Thinking</a> (at Wayfinding Academy)
       </li>
-      <li>
-        <p>Linear Algebra (at UW)</p>
-      </li>
-      <li>
-        <p>Systems of ODE's and Intro to PDE's (at UW)</p>
-      </li>
+      <li>Math and Society (at WCCW) </li>
+      <li>Pre-algebra (at WCCW) </li>
+      <li>Multivariable Calculus (at UW)</li>
+      <li>Linear Algebra (at UW)</li>
+      <li>Systems of ODE's and Intro to PDE's (at UW)</li>
     </ul>
   </main>
 
