--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,17 @@
     
     <h2>SET</h2>
     <p>I am currently working on a project genralizing the game card game SET. Below you can find links to varius versions we have created and other material.</p>
+    <h3> Projective decks </h3>
     <ul>
-      <li> </li>
+      <li> Pokemon SET </li>
+      <li> Fano SET </li>
+      <li> Projectivized (normal) SET </li>
+    </ul>
+	<h3> Non-abelian decks </h3>
+    <ul>
+      <li> Symmetric group S_3 </li>
+      <li> Fano SET </li>
+      <li> Projectivized (normal) SET </li>
     </ul>
   </main>
 
