--- a/hobbies.html
+++ b/hobbies.html
@@ -28,7 +28,6 @@
 
   <main>
     <h1>Hobbies</h1>
-    <p>under construction</p>
 
     <section id="reading">
       <h1>Reading</h1>
@@ -43,13 +42,13 @@
       <h1>Games</h1>
       <ul>
         <li>
-          <a href="">Dots and Boxes</a>
+          <a href="https://www.crcpress.com/The-Dots-and-Boxes-Game-Sophisticated-Childs-Play/Berlekamp/p/book/9781568811291">Dots and Boxes</a>
         </li>
         <li>
-          <a href="">Hanabi</a>
+          <a href="https://quuxplusone.github.io/blog/images/how-to-make-the-perfect-fireworks-display.pdf">Hanabi</a>
         </li>
         <li>
-          <a href="">Projective SET</a>
+          <a href="projects.html">SET</a>
         </li>
       </ul>
     </section>
