--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <ul>
         <li>Algebraic Geometry</li>
         <li>Teaching and Learning</li>
+        <li>SET</li>
         <li>Computer Vision</li>
       </ul>
     </section>
