--- a/outreach.html
+++ b/outreach.html
@@ -28,7 +28,7 @@
 
   <main>
     <h1>Outreach</h1>
-    <p>under construction</p>
+    <p>Two of my favorite groups to volunteer for are FEEPS and Math Circles. FEEPS is an amazing program offering college courses to women in prison. Math circle is a wonderful program offering mathematical joy to middle schoolers.
     <ul>
       <li>
         <a href="https://fepps.org/">FEPPS</a>
