--- a/projects.html
+++ b/projects.html
@@ -29,20 +29,43 @@
   <main>
     <h1>Projects</h1>
     
-    <h2>SET</h2>
-    <p>I am currently working on a project genralizing the game card game SET. Below you can find links to varius versions we have created and other material.</p>
+    <p>I am currently working on a project genralizing the card game SET. Below you can find links to varius versions we have created and other material. </p>
+
+    <h2>SET decks</h2>
+
     <h3> Projective decks </h3>
     <ul>
-      <li> Pokemon SET </li>
-      <li> Fano SET </li>
-      <li> Projectivized (normal) SET </li>
+      <li> <a href="set/dotset.pdf">Dot SET</a> </li>
+      <li> <a href="set/pokemonset.pdf">Pokemon SET</a> </li>
+      <li> <a href="set/fano.pdf">Fano SET</a> </li>
+      <li> <a href="set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
     </ul>
 	<h3> Non-abelian decks </h3>
     <ul>
-      <li> Symmetric group S_3 </li>
-      <li> Fano SET </li>
-      <li> Projectivized (normal) SET </li>
+      <li> <a href="set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
+      <li> <a href="set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
+      <li> <a href="set/s4.pdf">Symmetric group S<sub>4</sub></a> </li>
+      <li> <a href="set/wreathset.pdf">Wreath product Z/2Z by S<sub>3</sub></a> </li>
     </ul>
+
+    <h2>Online Versions</h2>
+
+  	<p> <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabrial Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online</p>
+  	<ul>
+      <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S3/index.html">Online symmetric group S<sub>3</sub></a> </li>
+      <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S4/index.html">Online symmetric group S<sub>4</sub></a> </li>
+    </ul>
+
+    <h2>Slides and Talks</h2>
+
+    <p>Here are some slides and videos for Talks <a href="https://people.maths.bris.ac.uk/~zx18363/index.html">Catherine Hsu</a> and I have given on this topic. </p>
+
+    <ul>
+      <li> <a href="set/normalsetslides.pdf">Normal slides</sub> </li>
+      <li> <a href="set/setslides.pdf">Advanced slides</a> </li>
+      <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
+    </ul>
+
   </main>
 
   <footer>
