--- a/teaching.html
+++ b/teaching.html
@@ -48,6 +48,9 @@
       <li>Multivariable Calculus (at UW)</li>
       <li>Linear Algebra (at UW)</li>
       <li>Systems of ODE's and Intro to PDE's (at UW)</li>
+      <li>Discrete Mathematics (at MathILy-Er) </li>
+      <li>Mathematics of Social Choice (at MathILy-Er) </li>
+      <li>Combinatorial Game Theory (at MathILy-Er) </li>
     </ul>
   </main>
 
