--- a/outreach.html
+++ b/outreach.html
@@ -36,6 +36,9 @@
       <li>
         <a href="https://sites.math.washington.edu/~mathcircle/circle/">UW Math Circle</a>
       </li>
+      <li>
+        <a href="https://mathforlove.com/julia-robinson-festival/">Julia Robinson Festival</a>
+      </li>
     </ul>
   </main>
 
