--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <main>
     <h1>Projects</h1>
     
-    <p>I am currently working on a project genralizing the card game SET. Below you can find links to varius versions we have created and other material. </p>
+    <p>I am currently working on a project generalizing the card game SET. Below you can find links to various versions we have created and other material. </p>
 
     <h2>SET decks</h2>
 
@@ -50,7 +50,7 @@
 
     <h2>Online Versions</h2>
 
-  	<p> <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabrial Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online</p>
+  	<p> <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabriel Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online</p>
   	<ul>
       <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S3/index.html">Online symmetric group S<sub>3</sub></a> </li>
       <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S4/index.html">Online symmetric group S<sub>4</sub></a> </li>
