--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -376,35 +376,35 @@
 					<tr>
 						<td>  </td>
 						<td> 19 Nov. </td>
-						<td> 8.4: Alternating Series </td>
-						<td>  </td>
+						<td> 8.5: Absolute Convergence and Ratio Test </td>
+						<td> <a href="./pcq/pcq8.5.pdf"> PCQ: 8.5 </a> </td>
 						<td> Quiz 8 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 21 Nov. </td>
-						<td> 8.5: Absolute Convergence and Ratio Test </td>
-						<td> <a href="./hw/hw19.pdf">HW 19</a>, <a href="./pcq/pcq8.5.pdf"> PCQ: 8.5 </a> </td>
+						<td> Taylor Polynomials: New text pages 593-601 </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 22 Nov. </td>
-						<td> 8.5: Absolute Convergence and Ratio Test </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 25 Nov. </td>
-						<td> 8.6: Power Series </td>
+						<td> pages 601-608 </td>
 						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 26 Nov. </td>
-						<td> 8.6: Power Series </td>
+						<td> 608-612 </td>
 						<td>  </td>
 						<td> Quiz 9 </td>
 					</tr>
@@ -425,35 +425,35 @@
 					<tr>
 						<td> 14 </td>
 						<td> 2 Dec. </td>
-						<td> 8.7: Taylor Series </td>
+						<td> 613-616 </td>
 						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 3 Dec. </td>
-						<td> 8.7: Taylor Series </td>
+						<td> 622-625 </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 5 Dec. </td>
-						<td> 8.8: Applications of Taylor Series </td>
+						<td>  </td>
 						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 6 Dec. </td>
-						<td> 8.8: Applications of Taylor Series </td>
+						<td> Magic </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 15 </td>
 						<td> 9 Dec. </td>
-						<td> 8.9: Fourier Series </td>
+						<td> Magic </td>
 						<td> <a href="./hw/hw23.pdf">HW 23</a> </td>
 						<td>  </td>
 					</tr>
