--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -46,7 +46,8 @@
 			<section id="announcments">
 			    <h2>Announcments</h2>
 			    <ul>
-				    <li>Welcome to Calculus II! Check back here for more updates during the semester. </li>
+			    	<li> For Taylor series we will be using a new text: <a href="./ch10.pdf">Series and Approximations</a> </li>
+				    <li>Welcome to Calculus II! Check back here for more updates during the semester. (jk) </li>
 			    </ul>
 	    	</section>
 
