--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -44,7 +44,7 @@
 
 		<div id="col2">
 			<section id="announcments">
-			    <h2>Announcments</h2>
+			    <h2>Announcements</h2>
 			    <ul>
 			    	<li> For Taylor series we will be using a new text: <a href="./ch10.pdf">Series and Approximations</a> </li>
 				    <li>Welcome to Calculus II! Check back here for more updates during the semester. (jk) </li>
