--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,19 @@
     
     <p>I am currently working on a project generalizing the card game SET. Below you can find links to various versions we have created and other material. </p>
 
+    <h2>Slides and Talks</h2>
+
+    <p>Here are some slides and a video for a talk <a href="https://people.maths.bris.ac.uk/~zx18363/index.html">Catherine Hsu</a> and I have given on this topic. </p>
+
+    <ul>
+      <li> <a href="set/normalsetslides.pdf">Normal slides</sub> </li>
+      <li> <a href="set/setslides.pdf">Advanced slides</a> </li>
+      <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
+    </ul>
+
     <h2>SET decks</h2>
+
+    <p><a href="set/Instructions.pdf">Instruction</a> on how to play each version.</p>
 
     <h3> Projective decks </h3>
     <ul>
@@ -56,15 +68,7 @@
       <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S4/index.html">Online symmetric group S<sub>4</sub></a> </li>
     </ul>
 
-    <h2>Slides and Talks</h2>
-
-    <p>Here are some slides and videos for Talks <a href="https://people.maths.bris.ac.uk/~zx18363/index.html">Catherine Hsu</a> and I have given on this topic. </p>
-
-    <ul>
-      <li> <a href="set/normalsetslides.pdf">Normal slides</sub> </li>
-      <li> <a href="set/setslides.pdf">Advanced slides</a> </li>
-      <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
-    </ul>
+    
 
   </main>
 
