--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -376,15 +376,15 @@
 					<tr>
 						<td>  </td>
 						<td> 19 Nov. </td>
-						<td> 4.1:Antiderivatives </td>
-						<td> <a href="./pcq/pcq4.1.pdf"> PCQ: 4.1 </a>  </td>
+						<td> 4.2:Sigma Notation </td>
+						<td> <a href="./pcq/pcq4.2,4.3.pdf"> PCQ: 4.2 and 4.3 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 21 Nov. </td>
-						<td> 4.2:Sigma Notation </td>
-						<td> <a href="./pcq/pcq4.2,4.3.pdf"> PCQ: 4.2 and 4.3 </a>  </td>
+						<td> 4.3: Area </td>
+						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -397,15 +397,15 @@
 					<tr>
 						<td> 13 </td>
 						<td> 25 Nov. </td>
-						<td> 4.3: Area </td>
-						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
+						<td> 4.4 The Definite Integral </td>
+						<td> <a href="./pcq/pcq4.4.pdf"> PCQ: 4.4 </a> , <a href="./hw/hw20.pdf">HW 20</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 26 Nov. </td>
 						<td> 4.4 The Definite Integral </td>
-						<td> <a href="./pcq/pcq4.4.pdf"> PCQ: 4.4 </a>  </td>
+						<td>  </td>
 						<td> Quiz 9 </td>
 					</tr>
 					<tr>
@@ -425,21 +425,21 @@
 					<tr>
 						<td> 14 </td>
 						<td> 2 Dec. </td>
-						<td> 4.4 The Definite Integral </td>
-						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
+						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
+						<td> <a href="./pcq/pcq4.5.pdf"> PCQ: 4.5 </a>, <a href="./pcq/pcq4.1.pdf"> PCQ: 4.1 </a> , <a href="./hw/hw21.pdf">HW 21</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 3 Dec. </td>
-						<td> 4.5: The Fundamental Theorem of Calculus </td>
-						<td> <a href="./pcq/pcq4.5.pdf"> PCQ: 4.5 </a>  </td>
+						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 5 Dec. </td>
-						<td> 4.5: The Fundamental Theorem of Calculus </td>
+						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
 						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td>  </td>
 					</tr>
