--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -426,7 +426,7 @@
 						<td> 14 </td>
 						<td> 2 Dec. </td>
 						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
-						<td> <a href="./pcq/pcq4.5.pdf"> PCQ: 4.5 </a>, <a href="./pcq/pcq4.1.pdf"> PCQ: 4.1 </a> , <a href="./hw/hw21.pdf">HW 21</a> </td>
+						<td> <a href="./pcq/pcq4.5.pdf"> PCQ: 4.5 </a>, <a href="./pcq/pcq4.1.pdf"> PCQ: 4.1 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -440,7 +440,7 @@
 						<td> </td>
 						<td> 5 Dec. </td>
 						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
-						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
+						<td> <a href="./hw/hw21.pdf">HW 21</a>, <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
