--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -427,7 +427,7 @@
 						<td> 14 </td>
 						<td> 2 Dec. </td>
 						<td> 613-616 </td>
-						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
+						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -441,7 +441,7 @@
 						<td> </td>
 						<td> 5 Dec. </td>
 						<td>  </td>
-						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
+						<td> <a href="./hw/hw21.pdf">HW 21</a>, <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
