--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -148,8 +148,8 @@
 					<tr>
 						<td>  </td>
 						<td> 7 Feb. </td>
-						<td> </td>
-						<td> </td>
+						<td> 2.2 </td>
+						<td> Indirect proofs </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -188,48 +188,48 @@
 					<tr>
 						<td> 5 </td>
 						<td> 17 Feb. </td>
-						<td> 2.4 </td>
-						<td> Greatest common divisors </td>
+						<td>  </td>
+						<td> Review </td>
 						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 18 Feb. </td>
-						<td> 2.4 </td>
-						<td> GCD </td>
+						<td>  </td>
+						<td> Exam 1 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 20 Feb. </td>
-						<td> 2.5 </td>
-						<td> </td>
+						<td> 2.4 </td>
+						<td> Greatest common divisors </td>
 						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  <Oct>
 						<td> 21 Feb. </td>
-						<td> 2.5 </td>
-						<td> </td>
+						<td> 2.4 </td>
+						<td> Greatest common divisors </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 24 Feb. </td>
+						<td> 2.5 </td>
 						<td> </td>
-						<td> Review </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 25 Feb. </td>
-						<td> ? </td>
-						<td> Exam 1 </td>
+						<td> 2.5 </td>
+						<td>  </td>
 						<td> </td>
 						<td>  </td>
 					</tr>
@@ -308,8 +308,8 @@
 					<tr>
 						<td>  </td>
 						<td> 13 Mar. </td>
-						<td> 4.3 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Exam 2 </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -324,7 +324,7 @@
 					<tr>
 						<td>  </td>
 						<td> 17 Mar. </td>
-						<td> 6.1 </td>
+						<td> 4.3 </td>
 						<td>  </td>
 						<td> </td>
 						<td>  </td>
@@ -332,7 +332,7 @@
 					<tr>
 						<td> </td>
 						<td> 19 Mar. </td>
-						<td> 6.2 </td>
+						<td> 6.1 </td>
 						<td> </td>
 						<td>   </td>
 						<td>  </td>
@@ -340,8 +340,8 @@
 					<tr>
 						<td>  </td>
 						<td> 20 Mar. </td>
-						<td> </td>
-						<td> Exam 2 </td>
+						<td> 6.2 </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -436,15 +436,15 @@
 					<tr>
 						<td>  </td>
 						<td> 10 Apr. </td>
-						<td> 7.1 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Exam 3 </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 13 Apr. </td>
-						<td> 7.2 </td>
+						<td> 7.1 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -452,7 +452,7 @@
 					<tr>
 						<td>  </td>
 						<td> 14 Apr. </td>
-						<td> 7.3 </td>
+						<td> 7.2 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -460,7 +460,7 @@
 					<tr>
 						<td> </td>
 						<td> 16 Apr. </td>
-						<td> 7.4 </td>
+						<td> 7.3 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -468,8 +468,8 @@
 					<tr>
 						<td>  </td>
 						<td> 17 Apr. </td>
-						<td> </td>
-						<td> Exam 3 </td>
+						<td> 7.4 </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
