--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -71,7 +71,7 @@
 						<td> 1.1 </td>
 						<td> Introductions, puzzles, and counting </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./misc/group_problems.pdf">Group Problem </a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -94,7 +94,7 @@
 						<td> 27 Jan. </td>
 						<td> 1.3 </td>
 						<td> Counting arguments </td>
-						<td>  </td>
+						<td> <a href="./hw/hw1.pdf">hw 1</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
