--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -29,7 +29,7 @@
 		<div id="col1">
 			<h3>Links</h3>
   			<ul>
-  				<li> <a href="./syllabus/syllabus_spring2020_math215.pdf">Syllabus</a></p>
+  				<li> <a href="./syllabus.pdf">Syllabus</a></p>
   			</ul>
 
  			<h4>Class Info</h4>
