--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -29,7 +29,7 @@
 		<div id="col1">
 			<h3>Links</h3>
   			<ul>
-  				<li> <a href="./syllabus/syllabus_spring2020_math490.pdf">Syllabus</a></p>
+  				<li> <a href="./syllabus.pdf">Syllabus</a></p>
   			</ul>
 
  			<h4>Class Info</h4>
@@ -115,7 +115,7 @@
 					<tr>
 						<td> </td>
 						<td> 7 Feb. </td>
-						<td> ? </td>
+						<td>  </td>
 						<td>  </td>
 						<td> </td>
 					</tr>
@@ -221,7 +221,7 @@
 						<td>  </td>
 						<td> 13 Mar. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Mini-paper due </td>
 						<td>  </td>
 					</tr>
 					<tr>
