--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -73,7 +73,7 @@
 					<tr>
 						<td> </td>
 						<td> 24 Jan. </td>
-						<td> Voting Thoery </td>
+						<td> Voting Theory </td>
 						<td> <a href="./hw/hw0.pdf">Tell me about yourself </a></td>
 						<td>  </td>
 					</tr>
