--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -68,7 +68,7 @@
 						<td> 22 Jan. </td>
 						<td> Introductions </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./notes/day1.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td> </td>
