--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -95,8 +95,8 @@
 						<td>  </td>
 						<td> 31 Jan. </td>
 						<td>  </a> </td>
-						<td> ps 1 </td>
-						<td>  </td>
+						<td> <a href="./hw/hw1.pdf">Problem set 1 </a> </td>
+						<td> <a href="./proof_advice.pdf">Proof advice </a> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
