--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -75,7 +75,7 @@
 						<td> 24 Jan. </td>
 						<td> Voting Theory </td>
 						<td> <a href="./hw/hw0.pdf">Tell me about yourself </a></td>
-						<td>  </td>
+						<td> <a href="./notes/day2.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td> 2 </td>
