--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -111,7 +111,7 @@
 						<td> 2.0 </td>
 						<td> Basic number theory </td>
 						<td> <a href="./hw/hw2.pdf">hw 2</a> </td>
-						<td> <a href="./misc/counting_arguments.pdf">hw 2</a>  </td>
+						<td> <a href="./misc/counting_arguments.pdf">counting arguments</a>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
