--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -82,7 +82,7 @@
 						<td> 27 Jan. </td>
 						<td>  </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./notes/day3.pdf">notes </a>  </td>
 					</tr>
 					<tr>
 						<td> </td>
