--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <h1>Current Teaching</h1>
       <ul>
         <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH131/index.html">Math 131, Calculus I, Fall 2019</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH215/index.html">Math 215, Discrete Math, Spring 2020</a>
         </li>
         <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH132/index.html">Math 132 Calculus II, Fall 2019</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH490/index.html">Math 490, Mathematics of Social Choice, Spring 2020</a>
         </li>
       </ul>
     </section>
