--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -126,7 +126,7 @@
 						<td> 3 Feb. </td>
 						<td> 2.1 </td>
 						<td> The division algorithm </td>
-						<td> </td>
+						<td> <a href="./hw/hw3.pdf">hw 3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
