--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -123,7 +123,7 @@
 						<td> 4</td>
 						<td> 10 Feb. </td>
 						<td>   </td>
-						<td>  </td>
+						<td> <a href="./hw/hw2.pdf">Problem set 2 </a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
