--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -95,7 +95,7 @@
 						<td>  </td>
 						<td> 31 Jan. </td>
 						<td>  </a> </td>
-						<td> <a href="./hw/hw1.pdf">Problem set 1 </a> </td>
+						<td> <a href="./hw/hw1.pdf">Problem set 1 </a> <a href="./hw/hw1sol.pdf">Problem set 1 Solutions</a> </td>
 						<td> <a href="./proof_advice.pdf">Proof advice </a> </td>
 					</tr>
 					<tr>
