--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -142,7 +142,7 @@
 						<td> 6 Feb. </td>
 						<td> 2.2 </td>
 						<td> Indirect proofs </td>
-						<td>   </td>
+						<td>  <a href="./hw/hw4.pdf">hw 4</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
