--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -89,21 +89,21 @@
 						<td> 29 Jan. </td>
 						<td>  </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./notes/day4.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 31 Jan. </td>
 						<td>  </a> </td>
 						<td> <a href="./hw/hw1.pdf">Problem set 1 </a>, <a href="./hw/hw1sol.pdf">Problem set 1 Solutions</a> </td>
-						<td> <a href="./proof_advice.pdf">Proof advice </a> </td>
+						<td> <a href="./notes/day5.pdf">notes </a>, <a href="./proof_advice.pdf">Proof advice </a> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
 						<td> 3 Feb. </td>
 						<td>  </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./notes/day6.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
