--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -37,7 +37,7 @@
   				<p>Howard 132<br>MWF 12:40-1:40<br>
 
   			<h4>Office Hours</h4>
-  				<p>BoDine 304<br>M 3-4, T 12:30-2:30, W 11-12:30, Th 10:30-11:30, F: 10:30-11:30 </p>				
+  				<p>BoDine 304<br>M 3-4,<br> T 12:30-2:30,<br> W 11-12:30,<br> Th 10:30-11:30,<br> F: 10:30-11:30 </p>				
 		</div>
 
 		<div id="col2">
