--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -158,7 +158,7 @@
 						<td> 10 Feb. </td>
 						<td> 2.3 </td>
 						<td> Induction </td>
-						<td>  </td>
+						<td> <a href="./hw/hw5.pdf">hw 5</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
