--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -174,7 +174,7 @@
 						<td> 13 Feb. </td>
 						<td> 2.3 </td>
 						<td> Induction </td>
-						<td>  </td>
+						<td> <a href="./hw/hw6.pdf">hw 6</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
