--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -124,7 +124,7 @@
 						<td> 10 Feb. </td>
 						<td>   </td>
 						<td>   </td>
-						<td> </td>
+						<td> <a href="./notes/day9.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
