--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -190,7 +190,7 @@
 						<td> 17 Feb. </td>
 						<td>  </td>
 						<td> Review </td>
-						<td> </td>
+						<td> <a href="./exams/exam1prep.pdf">Exam 1 Prep</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
