--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -158,7 +158,7 @@
 						<td>  </td>
 						<td> 21 Feb. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw4.pdf">Problem set 4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
