--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -138,7 +138,7 @@
 						<td> 14 Feb. </td>
 						<td>  </td>
 						<td> <a href="./hw/hw3.pdf">Problem set 3 </a> </td>
-						<td>  </td>
+						<td> <a href="./arrowstheorem.pdf">Arrow's Theorem </a> </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
