--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -198,7 +198,7 @@
 						<td> 18 Feb. </td>
 						<td>  </td>
 						<td> Exam 1 </td>
-						<td> </td>
+						<td> <a href="./exams/takehomeexam1.pdf">Take-home Exam 1</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
