--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -110,7 +110,7 @@
 						<td> 5 Feb. </td>
 						<td>  </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./notes/day7.pdf">notes </a></td>
 					</tr>
 					<tr>
 						<td> </td>
