--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -117,7 +117,7 @@
 						<td> 7 Feb. </td>
 						<td>  </td>
 						<td> <a href="./hw/hw2.pdf">Problem set 2 </a> </td>
-						<td> </td>
+						<td> <a href="./notes/day8.pdf">notes </a> </td>
 					</tr>
 					<tr>
 						<td> 4</td>
@@ -130,8 +130,8 @@
 						<td>  </td>
 						<td> 12 Feb. </td>
 						<td>  </td>
-						<td>   </td>
-						<td>  </td>
+						<td> </td>
+						<td> <a href="./arrowstheorem.pdf">Arrow's Theorem </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -145,7 +145,7 @@
 						<td> 17 Feb. </td>
 						<td>  </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./arrowstheoremsolutions.pdf">Arrow's Theorem Proof </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
