--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -222,7 +222,7 @@
 						<td> 24 Feb. </td>
 						<td> 2.5 </td>
 						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw7.pdf">hw 7</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
