--- a/hobbies.html
+++ b/hobbies.html
@@ -29,6 +29,8 @@
   <main>
     <h1>Hobbies</h1>
 
+    <p>Every website needs a page that is incomplete and constantly under construction right?</p>
+
     <section id="reading">
       <h1>Reading</h1>
       <ul>
@@ -51,6 +53,15 @@
           <a href="projects.html">SET</a>
         </li>
       </ul>
+    </section>
+
+    <section id="Poi">
+    	<h1>Poi</h1>
+    	<ul>
+        	<li>
+          		<a href="https://playpoi.com/learn/guide-to-manifesting-poi-and-learning-your-first-moves/">Great learning series</a>
+        	</li>
+      	</ul>
     </section>
 
   </main>
