--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       </p>
       <ul>
         <li>Algebraic Geometry</li>
+        <li>Computer Vision</li>
         <li>Teaching and Learning</li>
         <li>SET</li>
-        <li>Computer Vision</li>
       </ul>
     </section>
 
@@ -57,10 +57,13 @@
       <h1>Publications</h1>
       <ul>
         <li>
-          <a href="https://arxiv.org/abs/1707.09332">Two Hilbert Schemes in Computer Vision</a>. Submitted.
+          <a href="https://arxiv.org/abs/1707.09332"><i>Two Hilbert Schemes in Computer Vision</i></a> (with M. Lieblich). Accepted for publication <br>  in SIAM Journal on Applied Algebra and Geometry, November 2019.
+        </li>
+        <li>
+        	<i>Projectivizing SET</i> (with C. Hsu and J. Ostroff). To appear in Math Horizons.
         </li>
     	<li>
-          The Essential Variety Revisited. In progress.
+          <i>The Essential Variety Revisited</i> (with M. Lieblich, and B. Viray). In preparation.
         </li>
       </ul>
     </section>
