--- a/teaching.html
+++ b/teaching.html
@@ -31,18 +31,18 @@
     <p>I am currently teaching:</p>
     <ul>
       <li>
-        <a href="classes/MATH131/index.html">MATH 131, Calculus I</a>
-      </li>
-      <li>
-        <a href="classes/MATH132/index.html">MATH 132, Calculus II</a>
-      </li>
+          <a href="https://lucasvanmeter.github.io/classes/MATH215/index.html">Math 215, Discrete Math, Spring 2020</a>
+        </li>
+        <li>
+          <a href="https://lucasvanmeter.github.io/classes/MATH490/index.html">Math 490, Mathematics of Social Choice, Spring 2020</a>
+        </li>
     </ul>
 
     <p>In the past I have taught:</p>
     <ul>
-      <li>
-        <a href="https://wayfindingacademy.org/list-of-events/2019/9/11/mathematical-thinking-lab">Mathematical Thinking</a> (at Wayfinding Academy)
-      </li>
+      <li>Calculus I (at L&C) </li>
+      <li>Calculus II (at L&C) </li>
+      <li> Mathematical Thinking (at Wayfinding Academy)</li>
       <li>Math and Society (at WCCW) </li>
       <li>Pre-algebra (at WCCW) </li>
       <li>Multivariable Calculus (at UW)</li>
