--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -237,8 +237,8 @@
 						<td>  </td>
 						<td> 27 Feb. </td>
 						<td> 3.1 </td>
-						<td> </td>
-						<td> </td>
+						<td> Logic and Truth Tables </td>
+						<td> <a href="./hw/hw7.pdf">hw 7</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
