--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -179,7 +179,7 @@
 						<td>  </td>
 						<td> 28 Feb. </td>
 						<td>  </td>
-						<td> </td>
+						<td> <a href="./hw/hw5.pdf">Problem set 5 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
