--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -152,7 +152,7 @@
 						<td> 19 Feb. </td>
 						<td>  </td>
 						<td>   </td>
-						<td>  </td>
+						<td> <a href="./votingcriteria.pdf">Voting Criteria </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
