--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -254,7 +254,7 @@
 						<td> 2 Mar. </td>
 						<td> 3.3 </td>
 						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw9.pdf">hw 9</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
