--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -270,7 +270,7 @@
 						<td> 5 Mar. </td>
 						<td> 4.1 </td>
 						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw10.pdf">hw 10</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
