--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -180,7 +180,7 @@
 						<td> 28 Feb. </td>
 						<td>  </td>
 						<td> <a href="./hw/hw5.pdf">Problem set 5 </a> </td>
-						<td> </td>
+						<td> <a href="./notes/openquestions.pdf">Open Questions</a>, Pro/Con <a href="./notes/procon3"> 1 </a>, <a href="./notes/procon2"> 2 </a>, <a href="./notes/procon1"> 3</a> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
