--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -187,7 +187,7 @@
 						<td> 2 Mar. </td>
 						<td> Weighted voting </td>
 						<td>   </td>
-						<td>  </td>
+						<td> <a href="./fourexamples.pdf">Four Examples</a> </td>
 					</tr>
 					<tr>
 						<td>  <Oct>
