--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -44,6 +44,9 @@
 			<section id="announcments">
 			    <h2>Announcments</h2>
 			    <ul>
+				    <li>Here are the <a href="./essayprompts.pdf">Mini-paper prompts </a> </li>
+			    </ul>
+			    <ul>
 				    <li>Welcome to Mathematics of Social Choice! I might add updates here during the semester. </li>
 			    </ul>
 	    	</section>
@@ -194,7 +197,7 @@
 						<td> 4 Mar. </td>
 						<td>  </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./essayprompts.pdf">Mini-paper prompts </a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
