--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -224,7 +224,7 @@
 						<td>  </td>
 						<td> 13 Mar. </td>
 						<td>  </td>
-						<td>  <a href="./hw/hw6.pdf">Problem set 6 </a>, Mini-paper due </td>
+						<td>  <a href="./hw/hw6.pdf">Problem set 6 </a>, Mini-paper draft due </td>
 						<td>  </td>
 					</tr>
 					<tr>
