--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -286,7 +286,7 @@
 						<td> 9 Mar. </td>
 						<td> 4.2 </td>
 						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw11.pdf">hw 11</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
