--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -183,7 +183,7 @@
 						<td> 28 Feb. </td>
 						<td>  </td>
 						<td> <a href="./hw/hw5.pdf">Problem set 5 </a> </td>
-						<td> <a href="./notes/openquestions.pdf">Open Questions</a>, Pro/Con <a href="./notes/procon3"> 1 </a>, <a href="./notes/procon2"> 2 </a>, <a href="./notes/procon1"> 3</a> </td>
+						<td> <a href="./notes/openquestions.pdf">Open Questions</a>, <a href="./notes/procon"> Pros/Cons </a> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
@@ -224,8 +224,8 @@
 						<td>  </td>
 						<td> 13 Mar. </td>
 						<td>  </td>
-						<td> Mini-paper draft due </td>
-						<td>  <a href="./hw/hw6.pdf">Problem set 6 </a>, Mini-paper draft due </td>
+						<td> <a href="./hw/hw6.pdf">Problem set 6 </a>, Mini-paper draft due </td>
+						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
