--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -183,7 +183,7 @@
 						<td> 28 Feb. </td>
 						<td>  </td>
 						<td> <a href="./hw/hw5.pdf">Problem set 5 </a> </td>
-						<td> <a href="./notes/openquestions.pdf">Open Questions</a>, <a href="./notes/procon"> Pros/Cons </a> </td>
+						<td> <a href="./notes/openquestions.pdf">Open Questions</a>, <a href="./notes/procon.pdf"> Pros/Cons </a> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
@@ -226,13 +226,12 @@
 						<td>  </td>
 						<td> <a href="./hw/hw6.pdf">Problem set 6 </a>, Mini-paper draft due </td>
 						<td> </td>
-						<td>  </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 16 Mar. </td>
 						<td> Apportionment </td>
-						<td>  </td>
+						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
