--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<div id="col2">
-			<section id="announcments">
+			<section id="announcements">
 			    <h2>Announcments</h2>
 			    <ul>
 				    <li>Welcome to Discrete Math! I might add updates here during the semester. </li>
