--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<div id="col2">
-			<section id="announcments">
+			<section id="announcements">
 			    <h2>Announcments</h2>
 			    <ul>
 				    <li>Here are the <a href="./essayprompts.pdf">Mini-paper prompts </a> </li>
