--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -303,7 +303,7 @@
 						<td> 4.3  </td>
 						<td> </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./exams/exam2prep.pdf">Exam 2 Prep</a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
