--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -218,7 +218,7 @@
 						<td> 11 Mar. </td>
 						<td>  </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./notes/powernotes.pdf">Notes</a> </td>
 					</tr>
 					<tr>
 						<td>  </td>
