--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -317,7 +317,7 @@
 						<td> 9 </td>
 						<td> 16 Mar. </td>
 						<td> 6.1,6.2 </td>
-						<td> </td>
+						<td> Relations </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -333,7 +333,7 @@
 						<td> </td>
 						<td> 19 Mar. </td>
 						<td> 6.3 </td>
-						<td> </td>
+						<td> Functions </td>
 						<td>   </td>
 						<td>  </td>
 					</tr>
@@ -381,7 +381,7 @@
 						<td> 11 </td>
 						<td> 30 Mar. </td>
 						<td> 6.3 </td>
-						<td> Functions </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -396,16 +396,16 @@
 					<tr>
 						<td> </td>
 						<td> 2 Apr. </td>
-						<td> 6.3 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Infinite Sets </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 3 Apr. </td>
-						<td> 6.3 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Infinite Sets </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
