--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -245,7 +245,7 @@
 						<td>  </td>
 						<td> 20 Mar. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw7.pdf">Problem set 7 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -273,7 +273,7 @@
 						<td> 11 </td>
 						<td> 30 Mar. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Voting paper due </td>
 						<td>  </td>
 					</tr>
 					<tr>
