--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -334,7 +334,7 @@
 						<td> 19 Mar. </td>
 						<td> 6.3 </td>
 						<td> Functions </td>
-						<td>   </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -342,7 +342,7 @@
 						<td> 20 Mar. </td>
 						<td> 6.3 </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw12.pdf">hw 12</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
