--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -332,16 +332,16 @@
 					<tr>
 						<td> </td>
 						<td> 19 Mar. </td>
-						<td> 6.3 </td>
-						<td> Functions </td>
+						<td> 6.2 </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 20 Mar. </td>
-						<td> 6.3 </td>
-						<td>  </td>
+						<td> 6.2 </td>
+						<td> Modular Arithmatic </td>
 						<td> <a href="./hw/hw12.pdf">hw 12</a> </td>
 						<td>  </td>
 					</tr>
@@ -381,7 +381,7 @@
 						<td> 11 </td>
 						<td> 30 Mar. </td>
 						<td> 6.3 </td>
-						<td>  </td>
+						<td> Functions </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -396,39 +396,39 @@
 					<tr>
 						<td> </td>
 						<td> 2 Apr. </td>
+						<td> 6.3 </td>
 						<td>  </td>
-						<td> Infinite Sets </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 3 Apr. </td>
+						<td> 6.3 </td>
 						<td>  </td>
-						<td> Infinite Sets </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 12 </td>
 						<td> 6 Apr. </td>
-						<td> 6.4 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Infinite Sets </td>
 						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 7 Apr. </td>
-						<td> 6.4 </td>
-						<td> </td>
+						<td>  </td>
+						<td> Infinite Sets </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 9 Apr. </td>
-						<td> 6.5 </td>
+						<td> Infinite Sets </td>
 						<td> </td>
 						<td>   </td>
 						<td>  </td>
@@ -444,7 +444,7 @@
 					<tr>
 						<td> 13 </td>
 						<td> 13 Apr. </td>
-						<td> 7.1 </td>
+						<td> 6.4 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -452,7 +452,7 @@
 					<tr>
 						<td>  </td>
 						<td> 14 Apr. </td>
-						<td> 7.2 </td>
+						<td> 6.4 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -460,7 +460,7 @@
 					<tr>
 						<td> </td>
 						<td> 16 Apr. </td>
-						<td> 7.3 </td>
+						<td> 6.5 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
@@ -468,7 +468,7 @@
 					<tr>
 						<td>  </td>
 						<td> 17 Apr. </td>
-						<td> 7.4 </td>
+						<td> 8.1 </td>
 						<td>  </td>
 						<td>  </td>
 						<td>  </td>
