--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -398,7 +398,7 @@
 						<td> 2 Apr. </td>
 						<td> 6.3 </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw13.pdf">hw 13</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
