--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -287,7 +287,7 @@
 						<td>  </td>
 						<td> 3 Apr. </td>
 						<td>  </td>
-						<td> Voting paper due </td>
+						<td>  <a href="./hw/hw8.pdf">Problem set 8 </a>, Voting paper due </td>
 						<td>  </td>
 					</tr>
 					<tr>
