--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -414,7 +414,7 @@
 						<td> 6 Apr. </td>
 						<td>  </td>
 						<td> Infinite Sets </td>
-						<td> </td>
+						<td> <a href="./hw/hw14.pdf">hw 14</a></td>
 						<td>  </td>
 					</tr>
 					<tr>
