--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -308,7 +308,7 @@
 						<td>  </td>
 						<td> 10 Apr. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw9.pdf">Problem set 9 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
