--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -430,7 +430,7 @@
 						<td> 9 Apr. </td>
 						<td> Infinite Sets </td>
 						<td> </td>
-						<td>   </td>
+						<td> <a href="./hw/hw15.pdf">hw 15</a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
