--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -428,8 +428,8 @@
 					<tr>
 						<td> </td>
 						<td> 9 Apr. </td>
-						<td> Infinite Sets </td>
 						<td> </td>
+						<td> Review </td>
 						<td> <a href="./hw/hw15.pdf">hw 15</a>  </td>
 						<td>  </td>
 					</tr>
@@ -437,7 +437,7 @@
 						<td>  </td>
 						<td> 10 Apr. </td>
 						<td>  </td>
-						<td> Exam 3 </td>
+						<td> <a href="./exams/exam3prep.pdf">Exam 3 Prep</a> </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
