--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -445,7 +445,7 @@
 						<td> 13 </td>
 						<td> 13 Apr. </td>
 						<td> 6.4 </td>
-						<td> </td>
+						<td> Permutations </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
@@ -453,7 +453,7 @@
 						<td>  </td>
 						<td> 14 Apr. </td>
 						<td> 6.4 </td>
-						<td> </td>
+						<td>  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
