--- a/classes/MATH490/index.html
+++ b/classes/MATH490/index.html
@@ -329,7 +329,7 @@
 						<td> </td>
 						<td> 17 Apr. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> <a href="./hw/hw10.pdf">Problem set 10 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
