--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -462,13 +462,13 @@
 						<td> 16 Apr. </td>
 						<td> 6.5 </td>
 						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw16.pdf">hw 16</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 17 Apr. </td>
-						<td> 8.1 </td>
+						<td> Festival of Scholars </td>
 						<td>  </td>
 						<td>  </td>
 						<td>  </td>
@@ -477,7 +477,7 @@
 						<td> 14 </td>
 						<td> 20 Apr. </td>
 						<td> 8.1 </td>
-						<td> </td>
+						<td> Graph Thoery </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
