--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -494,8 +494,8 @@
 						<td> 23 Apr. </td>
 						<td> 8.3 </td>
 						<td> </td>
-						<td> </td>
-						<td>  </td>
+						<td> <a href="./hw/hw17.pdf">hw 17</a> </td>
+						<td> <a href="./bookproblems.pdf">Problems from the book</a>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -516,23 +516,23 @@
 					<tr>
 						<td>  </td>
 						<td> 28 Apr. </td>
-						<td> ? </td>
+						<td> 8.5 </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 29 Apr. </td>
-						<td> ? </td>
-						<td> </td>
-						<td> </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
 						<td> 30 Apr. </td>
 						<td> ? </td>
+						<td> </td>
+						<td> </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 31 Apr. </td>
+						<td> NO CLASS </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
