--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -510,7 +510,7 @@
 						<td> 27 Apr. </td>
 						<td> 8.5 </td>
 						<td> </td>
-						<td> </td>
+						<td>  <a href="./hw/hw18.pdf">hw 18</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
