--- a/classes/MATH215/index.html
+++ b/classes/MATH215/index.html
@@ -526,13 +526,13 @@
 						<td> 30 Apr. </td>
 						<td> ? </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="./hw/hw19.pdf">hw 19</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 31 Apr. </td>
-						<td> NO CLASS </td>
+						<td> NO CLASS: Optional Review </td>
 						<td> </td>
 						<td>  </td>
 						<td>  </td>
