--- a/teaching.html
+++ b/teaching.html
@@ -40,6 +40,8 @@
 
     <p>In the past I have taught:</p>
     <ul>
+      <li> Discrete Math (at L&C) </li>
+      <li> Mathematics of Social Choice (at L&C) </li>
       <li>Calculus I (at L&C) </li>
       <li>Calculus II (at L&C) </li>
       <li> Mathematical Thinking (at Wayfinding Academy)</li>
